lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:44: error: ')' expected but 'if' found.
if (vy<=(-9)) {
^